--- a/src/index.template.html
+++ b/src/index.template.html
@@ -10,6 +10,10 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
+    <!--[if lte IE 9]>
+    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com">upgrade your browser</a> to improve your experience.</p>
+    <hr/>
+    <![endif]-->
     <div id="elmContainer"></div>
 </body>
 </html>
