--- a/src/index.template.html
+++ b/src/index.template.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 
     <title>Default Webapp</title>
-    <meta name="description" content="Default Webapp | Elm & ZEIT Now edition">
+    <meta name="description" content="<%= description %>">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
 
